--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -9,4 +9,7 @@ footer {
     width: 100%;
     line-height: 1.5;
     box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
